@@ -33,6 +33,18 @@ legend(if(bhat > 0) "topleft" else "topright", bty = "n",
   paste0("b = ", fmt(bhat, 3), "\np = ", fmt(bpvl, 3)))
 ```
 
+To replicate the analysis in R:
+```{r lm, results="hide", eval=FALSE}
+## data
+d <- read.csv("regression.csv")
+## regression
+m <- lm(y ~ x, data = d)
+summary(m)
+## visualization
+plot(y ~ x, data = d)
+abline(m)
+```
+
 Meta-information
 ================
 exname: Linear regression
